@@ -1,13 +1,13 @@
 AUX config 447 RMD160 e7c65cdee66dd93597f6608c48ab672327dfaf99 SHA1 32ec28fff992016971ddec982c203a44275552fc SHA256 8192a534941ef95ca93bfff3a0a078407480e52047048daccb5cb7acac1eaddf
 AUX modules.conf.strict.20090730 728 RMD160 20c291e9a1ab63c7ffeda41f1b28a1a3d1058a5b SHA1 79f164d12565c3f9cc633fbbfc3469f1337cabc9 SHA256 7deba8527d6002e25d5b307fa085341473add1bc6489902a920096012ba56456
 AUX modules.conf.targeted.20090730 746 RMD160 51929329cb860f5412ea4fda11e1d4bc8eafadae SHA1 80c8ac75f2102968f22f7469142b820a33a0a2c0 SHA256 435cb66eee3c702bd217a66d138d740ceb7f750380fb4681d6eae4b5acacf2c0
-AUX patchbundle-selinux-base-policy-2.20101213-r4.tar.bz2 6015 RMD160 d1494ddb1a0273a79323644d830eb95c72266e9f SHA1 308f85e4701f8f21843f16b9c9cd43fc7dbae4a9 SHA256 b3c363f5b675f4580c8b6cd5f56d089b9578ab7b435589876e013a2413a9492b
 AUX patchbundle-selinux-base-policy-2.20101213-r5.tar.bz2 8175 RMD160 6d78f0c245671f6713ed40e95e757a207dc24d4c SHA1 6e8308f3bde75322718110a40efb22e76c02771a SHA256 5fd9403c8d8a311c1def0eced87d7c3f29377b03842c16a935573668115e176e
 AUX patchbundle-selinux-base-policy-2.20101213-r6.tar.bz2 8175 RMD160 6d78f0c245671f6713ed40e95e757a207dc24d4c SHA1 6e8308f3bde75322718110a40efb22e76c02771a SHA256 5fd9403c8d8a311c1def0eced87d7c3f29377b03842c16a935573668115e176e
+AUX patchbundle-selinux-base-policy-2.20101213-r7.tar.bz2 8620 RMD160 03260916c42b1aab6925aa228adbccc384200fca SHA1 1bb6cf090d44cb6a7d57a4892253a4cc2ad138f7 SHA256 216ee1b33411dde947faa8954c12c81fb9abd344a244fb1b9643918dc4a83986
 AUX selinux-base-policy-20070329.diff 2822 RMD160 164c86d9eb814ada83499f529445d7360b634988 SHA1 22d4240dd4e8d4018e61e2d0d25c810bc0eeaa2b SHA256 6e45238d3baf2771dddb6d0323d3e012c657458d686564577b043199b0336d59
 DIST refpolicy-2.20101213.tar.bz2 559450 RMD160 4858f792f4db5b179de6fb8419a626c29d59bdd3 SHA1 0e881e99b8950a358eadc44633551ca10f12eaee SHA256 b691ee8f6066cc19bb0d4384fe3be277d97d22e9d4ac2db0c252065e8c3535de
-EBUILD selinux-base-policy-2.20101213-r4.ebuild 2835 RMD160 d0e13895cf94ca88129a1701b6b19c095b92ac2c SHA1 51e7fbc58c940804f976715cd4ac58db56be0b92 SHA256 2606dff3e2c0cc0df2d6afdb63fe55068757917fdb03a88bdfcf428594a11dfd
 EBUILD selinux-base-policy-2.20101213-r5.ebuild 2966 RMD160 51a93a365ec4ef49e4eb3db62619bc128c7f2b91 SHA1 d10a2ade60b4111081a0a8f1f4bc57378f6214d8 SHA256 dde60477c8f54d49392aa9fa27363c86478a768f788550df5ea67e768b9a5e78
 EBUILD selinux-base-policy-2.20101213-r6.ebuild 2985 RMD160 cb8f09671b9c553d42f11a51f8ff6fba9b8c62e8 SHA1 b0a87c89f86925e24564437a37b6013704366cdd SHA256 e260c587ef66d2fc745f3e1fb278d277be4a8db5b5679f5ee0f548ca1b577626
-MISC ChangeLog 17207 RMD160 ead4bc68c200acf97c27164e05fb4ae29bd4db07 SHA1 f69ce91bf5be208d9711504e185446309cd03463 SHA256 51a737cb7467e59d1b2c5c3bd587a4cd843795f2eea01af8ecf3e320cd540789
+EBUILD selinux-base-policy-2.20101213-r7.ebuild 2985 RMD160 cb8f09671b9c553d42f11a51f8ff6fba9b8c62e8 SHA1 b0a87c89f86925e24564437a37b6013704366cdd SHA256 e260c587ef66d2fc745f3e1fb278d277be4a8db5b5679f5ee0f548ca1b577626
+MISC ChangeLog 17476 RMD160 f2c73646fcb45b506bf27f06380580cbc1fb6be8 SHA1 0334e4d3bd81b06aca1ca0e255cebd042769ef26 SHA256 d5dc33215527cb7945e78fd38879809f4e75192d6d64b308a2eff850877157f4
 MISC metadata.xml 707 RMD160 119a98090a7457d57a2dc48fc822a89bad59007d SHA1 cc4658f695a4567a037ff619d27d259763d72611 SHA256 a7dd87ba539ac00b1a34f7ec8c6ca7e42f7378bf57906eef2d66a967502753de
